Updated index.html file

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>Built with pure CSS. No libraries, no JavaScript — just fundamentals applied to AI Regulation & Ethics.</p>
+      <p>Built with pure CSS.</p>
     </div>
   </footer>
 </body>
